--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ button{
   align-items: center;
   padding: 40px 0px;
   border-radius: 10px;
+  background: black;
 
 }
 .card .profile-container{
@@ -56,7 +57,7 @@ button{
   border-radius: 10px;
   background: black;
   overflow: hidden;
-  box-shadow: 5px 10px 15px rgba(147,146,52,1);
+  /* box-shadow: 5px 10px 15px rgba(147,146,52,1); */
 }
 .profile-container .profile-row{
   width: 100%;
