--- a/style.css
+++ b/style.css
@@ -44,23 +44,23 @@ button{
 
 .card{
   display: flex;
+  width: 800px;
   flex-direction: column;
   align-items: center;
   padding: 40px 0px;
   border-radius: 10px;
   background: black;
+  box-shadow: 5px 10px 15px rgba(147,146,52,1);
 
 }
-.card .profile-container{
-  width: 750px;
-  padding: 2rem;
+.profile-container{
+  width: 700px;
   border-radius: 10px;
   background: black;
   overflow: hidden;
-  /* box-shadow: 5px 10px 15px rgba(147,146,52,1); */
 }
 .profile-container .profile-row{
-  width: 100%;
+  width: 95%;
   display: flex;
   align-items: center;
   position: relative;
@@ -180,15 +180,15 @@ button{
   padding: 1rem;
   overflow: auto;
 }
-.profile-container .repos-container::-webkit-scrollbar{
+.repos-container::-webkit-scrollbar{
   width: 10px;
   border-radius: 20px;
 }
-.profile-container .repos-container::-webkit-scrollbar-thumb{
+.repos-container::-webkit-scrollbar-thumb{
   background: goldenrod;
   border-radius: 20px;
 }
-.profile-container .repos-container::-webkit-scrollbar-track{
+.repos-container::-webkit-scrollbar-track{
   background: rgb(228, 200, 130);
   border-radius: 20px;
 }
